--- a/Basics.Web/Client/Shared/NavMenu.razor
+++ b/Basics.Web/Client/Shared/NavMenu.razor
@@ -18,6 +18,12 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Points
             </NavLink>
         </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/vectors" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Vectors
+            </NavLink>
+        </li>
     </ul>
 </div>
 
