--- a/Basics.Web/Client/Shared/NavMenu.razor
+++ b/Basics.Web/Client/Shared/NavMenu.razor
@@ -24,6 +24,12 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Vectors
             </NavLink>
         </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/rays" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Rays
+            </NavLink>
+        </li>
     </ul>
 </div>
 
