--- a/Basics.Web/Client/Pages/Points.razor
+++ b/Basics.Web/Client/Pages/Points.razor
@@ -66,7 +66,7 @@ else
             return;
 
         foreach (var point in points)
-            await myDrawingContainer.DrawPoint(point);
+            await myDrawingContainer.DrawPointNormalized(point);
     }
 
     private async Task AnimatePoints()
