--- a/Basics.Web/Client/Shared/NavMenu.razor
+++ b/Basics.Web/Client/Shared/NavMenu.razor
@@ -30,6 +30,12 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Rays
             </NavLink>
         </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/animation1" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> 1<sup>st</sup> Animation
+            </NavLink>
+        </li>
     </ul>
 </div>
 
