--- a/Basics.Web/Client/Shared/NavMenu.razor
+++ b/Basics.Web/Client/Shared/NavMenu.razor
@@ -42,6 +42,18 @@
                 <span class="oi oi-home" aria-hidden="true"></span> 2<sup>nd</sup> Animation
             </NavLink>
         </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/twopoints" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> <sup>Two</sup> Points
+            </NavLink>
+        </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/twoanimation2" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> <sup>Two 2nd</sup> Animation
+            </NavLink>
+        </li>
     </ul>
 </div>
 
